More overflow correction.

--- a/ennuicastr.css
+++ b/ennuicastr.css
@@ -15,7 +15,7 @@ a {
 .rflex {
     display: flex;
     align-items: center;
-    overflow: auto;
+    overflow: auto none;
 }
 
 .halfspan {
